--- a/package.json
+++ b/package.json
@@ -5,15 +5,27 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@nestjs/common": "^10.0.2",
-    "@nestjs/core": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.2",
+    "@grpc/grpc-js": "^1.13.3",
+    "@nestjs/common": "^11.0.20",
+    "@nestjs/core": "^11.0.20",
+    "@nestjs/microservices": "^11.0.20",
+    "@nestjs/platform-express": "^11.0.20",
+    "@nestjs/websockets": "^11.0.20",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.7",
     "axios": "^1.6.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "ioredis": "^5.6.1",
+    "kafkajs": "^2.2.4",
+    "mqtt": "^5.11.0",
+    "nats": "^2.29.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@nestjs/platform-socket.io": "^11.0.20",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "20.8.0",
@@ -28,8 +40,12 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/amqplib": "^0.10.7",
     "@types/jest": "^29.5.12",
-    "@types/node": "~18.16.9",
+    "@types/kafkajs": "^1.9.0",
+    "@types/mqtt": "^2.5.0",
+    "@types/node": "^22.14.1",
+    "bun-types": "^1.2.10",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "jest": "^29.7.0",
