--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nestjs/core": "^11.0.20",
     "@nestjs/microservices": "^11.0.20",
     "@nestjs/platform-express": "^11.0.20",
+    "@nestjs/terminus": "^11.0.0",
     "@nestjs/websockets": "^11.0.20",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.7",
@@ -21,10 +22,16 @@
     "mqtt": "^5.11.0",
     "nats": "^2.29.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@mikro-orm/core": "^6.4.13",
+    "@mikro-orm/mongodb": "^6.4.13",
+    "@mikro-orm/nestjs": "^6.1.1",
+    "@mikro-orm/postgresql": "^6.4.13",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/platform-socket.io": "^11.0.20",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
@@ -48,8 +55,10 @@
     "bun-types": "^1.2.10",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "fs": "^0.0.1-security",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "20.8.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
@@ -57,6 +66,10 @@
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
+    "verdaccio": "^6.0.5",
     "webpack-cli": "^5.1.4"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
