--- a/libs/shared/src/config/env/.env.example
+++ b/libs/shared/src/config/env/.env.example
@@ -27,3 +27,12 @@ MONGO_CONN_TIMEOUT=5000
 MONGO_SOCKET_TIMEOUT=30000
 MONGO_MAX_RETRIES=3
 MONGO_RETRY_DELAY=1000
+
+# Email 警报配置
+ALERT_EMAIL_SMTP_HOST=smtp.example.com
+ALERT_EMAIL_SMTP_PORT=587
+ALERT_EMAIL_FROM=alerts@example.com
+ALERT_EMAIL_TO=admin@example.com,ops@example.com
+
+# Slack 警报配置
+ALERT_SLACK_WEBHOOK_URL=https://hooks.slack.com/services/XXX/YYY/ZZZ
