--- a/nx.json
+++ b/nx.json
@@ -37,13 +37,7 @@
       "inputs": ["production", "^production"]
     }
   },
-  "cacheableOperations": [
-    "build",
-    "test",
-    "lint",
-    "e2e",
-    "docker-build"
-  ],
+  "cacheableOperations": ["build", "test", "lint", "e2e", "docker-build"],
   "release": {
     "version": {
       "preVersionCommand": "bunx nx run-many -t build"
